MicroserviceArchitecture/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apimobile
  namespace: otus
  labels:
    app: apimobile
spec: 
  replicas: 2
  minReadySeconds: 15
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: apimobile  
  template:
    metadata:
      labels:
        app: apimobile           
    spec:    
      containers:
      - image: "rip555/socialnetwork:0.0.5"
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
        name: apimobile
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP            
        livenessProbe:
          initialDelaySeconds: 30
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP   
        startupProbe:    
          initialDelaySeconds: 10
          failureThreshold: 200
          periodSeconds: 10      
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
