MicroserviceArchitecture/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apimobile
  namespace: otus
  labels:
    app: apimobile
spec:
  ports: 
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: apimobile
